--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Elisons website"
 author: "store"
-description: "elisons store<b style=\"color: #f45;\">&lt;3</b>"
+description: "elisons store<b style=\"color: #f45</b>"
 permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
